conformance/tests/backendtlspolicy-invalid-kind.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backendtlspolicy-invalid-kind-test
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
      namespace: gateway-conformance-infra
  hostnames:
    - abc.example.com
  rules:
    - backendRefs:
        - name: backendtlspolicy-invalid-kind-test
          port: 443
      matches:
        - path:
            type: Exact
            value: /backendtlspolicy-invalid-kind
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-invalid-kind-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
    - name: "https"
      protocol: TCP
      appProtocol: HTTPS
      port: 443
      targetPort: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: invalid-kind
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: "backendtlspolicy-invalid-kind-test"
  validation:
    caCertificateRefs:
      - group: invalid.io
        kind: InvalidKind
        name: "invalid-kind"
    hostname: "abc.example.com"
